add: adding img to html

--- a/index.html
+++ b/index.html
@@ -22,23 +22,25 @@
             <div class="flex container mar-auto">
 
                 <!-- Logo Side -->
-                <div class="dashed logo-side">logo</div>
+                <div class="logo-side"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
                 <!-- /Logo Side -->
 
                 <!-- Middle Section -->
-                <div class="dashed middle-section">
+                <div class="middle-section">
                     <ul class="flex">
-                        <li><a href="http://">link</a></li>
-                        <li><a href="http://">link</a></li>
-                        <li><a href="http://">link</a></li>
-                        <li><a href="http://">link</a></li>
-                        <li><a href="http://">link</a></li>
+                        <li><a href="http://">Scarica</a></li>
+                        <li><a href="http://">Perchè Discord</a></li>
+                        <li><a href="http://">Nitro</a></li>
+                        <li><a href="http://">Sicurezza</a></li>
+                        <li><a href="http://">Assistenza</a></li>
                     </ul>
                 </div>
                 <!-- /Middle Section -->
 
                 <!-- Login Side -->
-                <div class="dashed login-side"><a href="http://">login</a></div>
+                <div class="login-side">
+                    <a class="wh-button" href="http://">Accedi</a>
+                </div>
                 <!-- /Login Side -->
 
             </div>
@@ -54,7 +56,7 @@
     <!-- MAIN -->
     <main>
 
-        <!-- First Section -->
+        <!-- Jumbo Section -->
         <section class="first-section">
 
             <!-- Container -->
@@ -64,14 +66,16 @@
             <!-- /Container -->
 
         </section>
-        <!-- /First Section -->
+        <!-- /Jumbo Section -->
 
         <!-- Second Section -->
         <section class="second-section">
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="dashed left-box "></div>
+                <div class="left-box ">
+                    <img src="img/item1.svg" alt="" srcset="">
+                </div>
                 <div class="dashed right-box "></div>
             </div>
             <!-- /Container -->
@@ -84,7 +88,9 @@
 
             <!-- Container -->
             <div class="flex container mar-auto row-reverse">
-                <div class="dashed left-box "></div>
+                <div class="left-box ">
+                    <img src="img/item2.svg" alt="">
+                </div>
                 <div class="dashed right-box "></div>
             </div>
             <!-- /Container -->
@@ -97,7 +103,9 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="dashed left-box "></div>
+                <div class="dashed left-box ">
+                    <img src="img/item3.svg" alt="">
+                </div>
                 <div class="dashed right-box "></div>
             </div>
             <!-- /Container -->
@@ -110,7 +118,9 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="dashed rectangle"></div>
+                <div class="flex rectangle">
+                    <img src="img/item4-big.svg" alt="">
+                </div>
             </div>
             <!-- /Container -->
 
@@ -135,7 +145,7 @@
                     <div class="dashed box"></div>
                     <div class="dashed box"></div>
                 </div>
-                
+
             </div>
             <!-- /Container -->
 
