feat: header done

--- a/index.html
+++ b/index.html
@@ -19,10 +19,14 @@
         <section class="header-bar">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
+            <div class="flex header-ctn mar-auto">
 
                 <!-- Logo Side -->
-                <div class="logo-side"><a href="index.html"><img src="img/logo.svg" alt=""></a></div>
+                <div class="logo-side">
+                    <a href="index.html">
+                        <img src="img/logo.svg" alt="">
+                    </a>
+                </div>
                 <!-- /Logo Side -->
 
                 <!-- Middle Section -->
@@ -39,7 +43,7 @@
 
                 <!-- Login Side -->
                 <div class="login-side">
-                    <a class="wh-button" href="http://">Accedi</a>
+                    <a class="white-btn" href="http://">Accedi</a>
                 </div>
                 <!-- /Login Side -->
 
@@ -56,17 +60,28 @@
     <!-- MAIN -->
     <main>
 
-        <!-- Jumbo Section -->
-        <section class="first-section">
+        <!-- Hero Section -->
+        <section class="hero-section">
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="dashed first-box "></div>
+                <div class="hero-box ">
+                    <div class="hero-title">Il tuo posto per parlare</div>
+                    <p class="hero-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                        semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende
+                        più facile chiacchierare ogni giorno e ritrovarsi più spesso. 
+                    </p>
+                    <div class="flex hero-btn">
+                        <a href="" class="white-btn">Scarica per Mac</a>
+                        <a href="" class="black-btn">Apri Discord nel tuo browser</a>
+                    </div>
+                </div>
+                
             </div>
             <!-- /Container -->
 
         </section>
-        <!-- /Jumbo Section -->
+        <!-- /Hero Section -->
 
         <!-- Second Section -->
         <section class="second-section">
@@ -76,7 +91,12 @@
                 <div class="left-box ">
                     <img src="img/item1.svg" alt="" srcset="">
                 </div>
-                <div class="dashed right-box "></div>
+                <div class="dashed right-box">
+                    <div class="secnd-sec-box">
+                        <div class="secnd-sec-title">Un luogo ad invito con tutto la spazio necessario per parlare</div>
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <!-- /Container -->
 
@@ -103,7 +123,7 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="dashed left-box ">
+                <div class=" left-box ">
                     <img src="img/item3.svg" alt="">
                 </div>
                 <div class="dashed right-box "></div>
@@ -154,7 +174,11 @@
             <!-- Container -->
             <div class="flex ftr-container mar-auto">
                 <div class="flex signup-section">
-                    <div class="flex dashed footer-logo">Logo</div>
+                    <div class="flex dashed footer-logo">
+                        <a href="index.html">
+                            <img src="img/logo.svg" alt="">
+                        </a>
+                    </div>
                     <div class="flex dashed signup-btn"><a href="http://">Sign Up</a></div>
                 </div>
             </div>
