feat: first item section done

--- a/index.html
+++ b/index.html
@@ -67,74 +67,82 @@
             <div class="flex container mar-auto">
                 <div class="hero-box ">
                     <div class="hero-title">Il tuo posto per parlare</div>
-                    <p class="hero-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    <p class="hero-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
+                        mondiale, o
                         semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende
-                        più facile chiacchierare ogni giorno e ritrovarsi più spesso. 
+                        più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                     </p>
                     <div class="flex hero-btn">
                         <a href="" class="white-btn">Scarica per Mac</a>
                         <a href="" class="black-btn">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
-                
+
             </div>
             <!-- /Container -->
 
         </section>
         <!-- /Hero Section -->
 
-        <!-- Second Section -->
-        <section class="second-section">
+        <!-- First Item Section -->
+        <section class="first-item-section">
 
             <!-- Container -->
             <div class="flex container mar-auto">
                 <div class="left-box ">
                     <img src="img/item1.svg" alt="" srcset="">
                 </div>
-                <div class="dashed right-box">
+                <div class="right-box">
                     <div class="secnd-sec-box">
                         <div class="secnd-sec-title">Un luogo ad invito con tutto la spazio necessario per parlare</div>
-                        <p></p>
+                        <p>
+                            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                            semplicemente parlare della tua giornata senza intasare una chat di gruppo
+                        </p>
                     </div>
                 </div>
             </div>
             <!-- /Container -->
 
         </section>
-        <!-- /Second Section -->
+        <!-- /First Item Section -->
 
-        <!-- Third Section -->
-        <section class="third-section">
+        <!-- Second Item Section -->
+        <section class="second-item-section">
 
             <!-- Container -->
             <div class="flex container mar-auto row-reverse">
                 <div class="left-box ">
                     <img src="img/item2.svg" alt="">
                 </div>
-                <div class="dashed right-box "></div>
+                <div class="dashed right-box ">
+                    sec item
+                </div>
             </div>
             <!-- /Container -->
 
         </section>
-        <!-- /Third Section -->
+        <!-- /Second Item Section -->
 
-        <!-- Fourth Section -->
-        <section class="fourth-section">
+        <!-- Third Item Section -->
+        <section class="third-item-section">
 
             <!-- Container -->
             <div class="flex container mar-auto">
                 <div class=" left-box ">
                     <img src="img/item3.svg" alt="">
                 </div>
-                <div class="dashed right-box "></div>
+                <div class="dashed right-box ">
+                    thir
+                </div>
             </div>
             <!-- /Container -->
 
         </section>
-        <!-- /Fourth Section -->
+        <!-- /Third Item Section -->
 
-        <!-- Fifth Section -->
-        <div class="fifth-section">
+        <!-- Big Item Section -->
+        <div class="big-item-section">
 
             <!-- Container -->
             <div class="flex container mar-auto">
@@ -145,7 +153,7 @@
             <!-- /Container -->
 
         </div>
-        <!-- /Fifth Section -->
+        <!-- /Big Item Section -->
 
     </main>
     <!-- /MAIN -->
