feat: second and third section done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <!-- Login Side -->
                 <div class="login-side">
-                    <a class="white-btn" href="http://">Accedi</a>
+                    <a class="login-btn" href="http://">Accedi</a>
                 </div>
                 <!-- /Login Side -->
 
@@ -64,7 +64,7 @@
         <section class="hero-section">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
+            <div class="flex hero-container mar-auto">
                 <div class="hero-box ">
                     <div class="hero-title">Il tuo posto per parlare</div>
                     <p class="hero-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
@@ -89,18 +89,16 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="left-box ">
-                    <img src="img/item1.svg" alt="" srcset="">
+                <img src="img/item1.svg" alt="" srcset="">
+
+                <div class="item-box">
+                    <div class="item-title">Un luogo ad invito con tutto la spazio necessario per parlare</div>
+                    <p class="item-paragraph">
+                        I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                        semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
                 </div>
-                <div class="right-box">
-                    <div class="secnd-sec-box">
-                        <div class="secnd-sec-title">Un luogo ad invito con tutto la spazio necessario per parlare</div>
-                        <p>
-                            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
-                            semplicemente parlare della tua giornata senza intasare una chat di gruppo
-                        </p>
-                    </div>
-                </div>
+
             </div>
             <!-- /Container -->
 
@@ -112,12 +110,16 @@
 
             <!-- Container -->
             <div class="flex container mar-auto row-reverse">
-                <div class="left-box ">
-                    <img src="img/item2.svg" alt="">
+                <img src="img/item2.svg" alt="">
+
+                <div class="item-box">
+                    <div class="item-title">Dove trovarsi è facile</div>
+                    <p class="item-paragraph">
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere
+                        che sei lì e unirsi istantaneamente senza dover chiamare.
+                    </p>
                 </div>
-                <div class="dashed right-box ">
-                    sec item
-                </div>
+
             </div>
             <!-- /Container -->
 
@@ -129,12 +131,17 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class=" left-box ">
-                    <img src="img/item3.svg" alt="">
+                <img src="img/item3.svg" alt="">
+
+                <div class="item-box">
+                    <div class="item-title">Da pochi a un fandom</div>
+                    <p class="item-paragraph">
+                        Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai
+                        membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto
+                        altro.
+                    </p>
                 </div>
-                <div class="dashed right-box ">
-                    thir
-                </div>
+
             </div>
             <!-- /Container -->
 
@@ -146,9 +153,8 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div class="flex rectangle">
-                    <img src="img/item4-big.svg" alt="">
-                </div>
+                <!-- <div>Tecnologia affidabile per tenersi in contatto</div> -->
+                <img src="img/item4-big.svg" alt="">
             </div>
             <!-- /Container -->
 
