feat: all section into main done

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
         <!-- Hero Section -->
         <section class="hero-section">
-
             <!-- Container -->
             <div class="flex hero-container mar-auto">
                 <div class="hero-box ">
@@ -85,10 +84,10 @@
         <!-- /Hero Section -->
 
         <!-- First Item Section -->
-        <section class="first-item-section">
+        <section class="first-item-section p-y-120">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
+            <div class="flex container mar-auto col-gap">
                 <img src="img/item1.svg" alt="" srcset="">
 
                 <div class="item-box">
@@ -106,10 +105,11 @@
         <!-- /First Item Section -->
 
         <!-- Second Item Section -->
-        <section class="second-item-section">
+        <section class="second-item-section p-y-120">
+            <!-- <div class="layover"></div> -->
 
             <!-- Container -->
-            <div class="flex container mar-auto row-reverse">
+            <div class="flex container mar-auto row-reverse col-gap">
                 <img src="img/item2.svg" alt="">
 
                 <div class="item-box">
@@ -127,10 +127,10 @@
         <!-- /Second Item Section -->
 
         <!-- Third Item Section -->
-        <section class="third-item-section">
+        <section class="third-item-section p-y-120">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
+            <div class="flex container mar-auto col-gap">
                 <img src="img/item3.svg" alt="">
 
                 <div class="item-box">
@@ -149,12 +149,27 @@
         <!-- /Third Item Section -->
 
         <!-- Big Item Section -->
-        <div class="big-item-section">
+        <div class="big-item-section p-y-120">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
-                <!-- <div>Tecnologia affidabile per tenersi in contatto</div> -->
+            <div class="container mar-auto ">
+                <div class="item-title">Tecnologia affidabile per tenersi in contatto</div>
+                <p class="item-paragraph">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, tenetur! Molestiae, libero?
+                    Quam porro officia quasi deleniti nobis vitae repellendus beatae, omnis eum labore dignissimos sit
+                    doloribus hic dolore. Debitis!
+                </p>
+
                 <img src="img/item4-big.svg" alt="">
+
+                <div class="flex item-subtitle">
+                    <span>Pronto a iniziare la tua avventura?</span>
+                </div>
+
+                <a href="http://" class="blue-btn">
+                    Scarica per Linux
+                </a>
+
             </div>
             <!-- /Container -->
 
