--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
     <title>Discord | Your Place to Talk and Hang Out</title>
@@ -72,7 +75,10 @@
                         più facile chiacchierare ogni giorno e ritrovarsi più spesso.
                     </p>
                     <div class="flex hero-btn">
-                        <a href="" class="white-btn">Scarica per Mac</a>
+                        <a href="" class="white-btn">
+                            <i class="fa-solid fa-down-long"></i>
+                            Scarica per Linux
+                        </a>
                         <a href="" class="black-btn">Apri Discord nel tuo browser</a>
                     </div>
                 </div>
@@ -167,6 +173,7 @@
                 </div>
 
                 <a href="http://" class="blue-btn">
+                    <i class="fa-solid fa-down-long"></i>
                     Scarica per Linux
                 </a>
 
@@ -203,12 +210,12 @@
             <!-- Container -->
             <div class="flex ftr-container mar-auto">
                 <div class="flex signup-section">
-                    <div class="flex dashed footer-logo">
+                    <div class="flex footer-logo">
                         <a href="index.html">
                             <img src="img/logo.svg" alt="">
                         </a>
                     </div>
-                    <div class="flex dashed signup-btn"><a href="http://">Sign Up</a></div>
+                    <div class="flex signup-btn"><a href="" class="blue-btn">Sign Up</a></div>
                 </div>
             </div>
             <!-- /Container -->
