feat: language box

--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
                 <!-- Middle Section -->
                 <div class="middle-section">
                     <ul class="flex">
-                        <li><a href="http://">Scarica</a></li>
-                        <li><a href="http://">Perchè Discord</a></li>
-                        <li><a href="http://">Nitro</a></li>
-                        <li><a href="http://">Sicurezza</a></li>
-                        <li><a href="http://">Assistenza</a></li>
+                        <li><a href="#">Scarica</a></li>
+                        <li><a href="#">Perchè Discord</a></li>
+                        <li><a href="#">Nitro</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Assistenza</a></li>
                     </ul>
                 </div>
                 <!-- /Middle Section -->
 
                 <!-- Login Side -->
                 <div class="login-side">
-                    <a class="login-btn" href="http://">Accedi</a>
+                    <a class="login-btn" href="#">Accedi</a>
                 </div>
                 <!-- /Login Side -->
 
@@ -161,9 +161,7 @@
             <div class="container mar-auto ">
                 <div class="item-title">Tecnologia affidabile per tenersi in contatto</div>
                 <p class="item-paragraph">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, tenetur! Molestiae, libero?
-                    Quam porro officia quasi deleniti nobis vitae repellendus beatae, omnis eum labore dignissimos sit
-                    doloribus hic dolore. Debitis!
+                    Video e audio bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
                 </p>
 
                 <img src="img/item4-big.svg" alt="">
@@ -194,7 +192,14 @@
 
             <!-- Container -->
             <div class="flex container mar-auto">
-                <div id="pink-box" class="dashed box"></div>
+                <div id="pink-box" class="box">
+                    <div class="item-title blue-title">Il tuo posto per parlare</div>
+                    <div class="flex language">
+                        <img id="italy-flag" src="img/ita.png" alt="italy flag image">
+                        <span>Italiano</span>
+                    </div>
+                    
+                </div>
                 <div class="flex col-70">
                     <div class="dashed box"></div>
                     <div class="dashed box"></div>
