add: social icons

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- FontAwesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
@@ -161,7 +163,9 @@
             <div class="container mar-auto ">
                 <div class="item-title">Tecnologia affidabile per tenersi in contatto</div>
                 <p class="item-paragraph">
-                    Video e audio bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                    Video e audio bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in
+                    video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la
+                    condivisione schermo.
                 </p>
 
                 <img src="img/item4-big.svg" alt="">
@@ -197,8 +201,15 @@
                     <div class="flex language">
                         <img id="italy-flag" src="img/ita.png" alt="italy flag image">
                         <span>Italiano</span>
+                        <i id="angle-down" class="fa-solid fa-angle-down"></i>
                     </div>
-                    
+                    <div class="flex social-icon">
+                        <a href="http://"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="http://"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="http://"><i class="fa-brands fa-square-facebook"></i></a>
+                        <a href="http://"><i class="fa-brands fa-youtube"></i></a>
+                    </div>
+
                 </div>
                 <div class="flex col-70">
                     <div class="dashed box"></div>
