feat: footer done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Custom Style -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/discord-icon.png">
     <title>Discord | Your Place to Talk and Hang Out</title>
 </head>
 
@@ -195,7 +196,7 @@
         <section class="footer-label">
 
             <!-- Container -->
-            <div class="flex container mar-auto">
+            <div class="flex ftr-container mar-auto col-gap">
                 <div id="pink-box" class="box">
                     <div class="item-title blue-title">Il tuo posto per parlare</div>
                     <div class="flex language">
@@ -211,18 +212,57 @@
                     </div>
 
                 </div>
-                <div class="flex col-70">
-                    <div class="dashed box"></div>
-                    <div class="dashed box"></div>
-                    <div class="dashed box"></div>
-                    <div class="dashed box"></div>
+                <div class="flex col-70 line-height-60 col-gap">
+                    <div class="box">
+                        <span class="item-title">Prodotto</span>
+                        <ul>
+                            <li><a href="http://">Scarica</a></li>
+                            <li><a href="http://">Perchè Discord</a></li>
+                            <li><a href="http://">Nitro</a></li>
+                            <li><a href="http://">Sicurezza</a></li>
+                            <li><a href="http://">Assistenza</a></li>
+                        </ul>
+                    </div>
+                    <div class="box">
+                        <span class="item-title">Compagnia</span>
+                        <ul>
+                            <li><a href="http://">Chi siamo</a></li>
+                            <li><a href="http://">Lavora con noi</a></li>
+                            <li><a href="http://">Marchio</a></li>
+                            <li><a href="http://">Redazione</a></li>
+                            <li><a href="http://">Negozio</a></li>
+                        </ul>
+                    </div>
+                    <div class="box">
+                        <span class="item-title">Risorse</span>
+                        <ul>
+                            <li><a href="http://">Scarica</a></li>
+                            <li><a href="http://">Perchè Discord</a></li>
+                            <li><a href="http://">Nitro</a></li>
+                            <li><a href="http://">Sicurezza</a></li>
+                            <li><a href="http://">Assistenza</a></li>
+                            <li><a href="http://">Scarica</a></li>
+                            <li><a href="http://">Perchè Discord</a></li>
+                            <li><a href="http://">Nitro</a></li>
+                            <li><a href="http://">Sicurezza</a></li>
+                            <li><a href="http://">Assistenza</a></li>
+                        </ul>
+                    </div>
+                    <div class="box">
+                        <span class="item-title">Norme</span>
+                        <ul>
+                            <li><a href="http://">Scarica</a></li>
+                            <li><a href="http://">Perchè Discord</a></li>
+                            <li><a href="http://">Nitro</a></li>
+                            <li><a href="http://">Sicurezza</a></li>
+                            <li><a href="http://">Assistenza</a></li>
+                        </ul>
+                    </div>
                 </div>
 
             </div>
             <!-- /Container -->
-
-            <hr>
-
+            <hr class="mar-auto">
             <!-- Container -->
             <div class="flex ftr-container mar-auto">
                 <div class="flex signup-section">
