feat: project finished

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <img src="img/logo.svg" alt="">
                         </a>
                     </div>
-                    <div class="flex signup-btn"><a href="" class="blue-btn">Sign Up</a></div>
+                    <div class="flex signup-btn"><a href="" class="blue-btn">Registrati</a></div>
                 </div>
             </div>
             <!-- /Container -->
