feat: README.md

--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
         </section>
         <!-- /First Item Section -->
 
+        <!-- Wave -->
+        <div class="wave">
+            <img src="/img/wave.svg" class="wave-gray" alt="wave image">
+
+        </div>
+        <!-- /Wave -->
+
         <!-- Second Item Section -->
         <section class="second-item-section p-y-120">
             <!-- <div class="layover"></div> -->
@@ -135,6 +142,13 @@
         </section>
         <!-- /Second Item Section -->
 
+        <!-- Wave -->
+        <div class="wave-rotate">
+            <img src="/img/wave.svg" class="wave-white" alt="wave image">
+
+        </div>
+        <!-- /Wave -->
+
         <!-- Third Item Section -->
         <section class="third-item-section p-y-120">
 
@@ -156,6 +170,13 @@
 
         </section>
         <!-- /Third Item Section -->
+        
+        <!-- Wave -->
+        <div class="wave">
+            <img src="/img/wave.svg" class="wave-gray" alt="wave image">
+
+        </div>
+        <!-- /Wave -->
 
         <!-- Big Item Section -->
         <div class="big-item-section p-y-120">
@@ -281,8 +302,6 @@
 
     </footer>
     <!-- /FOOTER -->
-
-
 
 </body>
 
